# slib-sorter

./: README.md  requirements.txt  settings.json  setup.py  slib-sorter.py
.github/workflows/: python-app.yml  python-publish.yml
src/: filesorterfunctions.py  pyproject.toml  slib-sorter.py  slib_sorter.py
