[build-system]
requires = [
    "setuptools>=60.0.0",
    "wheel>=0.40.0",
    "termcolor>=2.3.0"
]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "slib-sorter"
version = "1.4.0"
requires-python = ">3.7"
description = "A Python package for sorting Sample Libraries"
license = "Apache-2.0"
authors = ["Lukas H <fettkindasindauchoke@gmail.com>"]

[project.urls]
homepage = "https://github.com/nrdrch/slib-sorter"
repository = "https://github.com/nrdrch/slib-sorter"
